# agama

doc/: btrfs-ui.md
rust/: Cargo.toml
rust/agama-cli/src/: main.rs
rust/agama-lib/: Cargo.toml
rust/agama-lib/share/: profile.schema.json
rust/agama-lib/src/: base_http_client.rs  dbus.rs  install_settings.rs  jobs.rs  lib.rs  store.rs
rust/agama-lib/src/jobs/: client.rs
rust/agama-lib/src/network/: client.rs  proxies.rs  settings.rs  types.rs
rust/agama-lib/src/scripts/: client.rs  model.rs  settings.rs  store.rs
rust/agama-lib/src/software/: client.rs
rust/agama-server/: Cargo.toml
rust/agama-server/src/: agama-web-server.rs
rust/agama-server/src/network/: model.rs
rust/agama-server/src/scripts/: web.rs
rust/agama-server/src/software/: web.rs
rust/agama-server/src/storage/: web.rs
rust/agama-server/tests/: network.rs
rust/agama-web-server/: Cargo.toml  README.md  assets
rust/agama-web-server/examples/: call_method_no_args.json  call_method_with_args.json  call_method_with_variant_args.json  get_property.json  run.sh  set_property.json
rust/agama-web-server/src/: dbus.rs  error.rs  handlers.rs  main.rs
rust/agama-web-server/src/handlers/: dbus.rs  http.rs  ws.rs
rust/agama-web-server/ui/: package-lock.json
rust/agama-web-server/ui/src/: App.js
rust/package/: agama.changes  agama.spec
web/: .eslintrc.json  package-lock.json  package.json  webpack.config.js
web/package/: agama-web-ui.spec  cockpit-agama.changes
web/src/: App.jsx  index.js
web/src/context/: installerL10n.jsx
web/src/queries/: l10n.ts
(+39 files in other folders)
