[package]
name = "agama-web-server"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["ws"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["tokio-macros", "macros", "rt-multi-thread"] }
