[package]
name = "agama-web-server"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agama-lib = { path = "../agama-lib" }
axum = { version = "0.7.4", features = ["ws"] }
futures-util = "0.3.30"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = [
  "tokio-macros",
  "macros",
  "rt-multi-thread",
] }
tower-http = { version = "0.5.1", features = ["trace", "cors", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zbus = { version = "3.14.1", features = ["tokio"] }
